# Template_Cpp_Tdd

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md  example_class.cpp  example_class.h
tests/: .gitignore  CMakeLists.txt  README.md  tests.cpp
